k8/jupyter/deployment-splunk.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ae-jupyter
  annotations:
    description: The Stock Analysis Jupyter Application
    runtime: python3
  labels:
    sa: jupyter
    purpose: stock-analysis
    layer: backend
    messaging: redis
    cache: redis
    pubsub: publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ae-jupyter
      backend: enabled
  template:
    metadata:
      labels:
        app: ae-jupyter
        backend: enabled
        purpose: stock-analysis
        layer: backend
        messaging: redis
        cache: redis
        pubsub: publisher
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: backend
                operator: In
                values:
                - enabled
      hostname: ae-jupyter
      restartPolicy: Always
      containers:
      - image: jayjohnson/stock-analysis-jupyter:latest
        imagePullPolicy: Always
        name: ae-jupyter
        resources: {}
        command:
        - /bin/bash
        - -c
        - cd /opt/sa/ &&
          . /opt/venv/bin/activate &&
          /opt/sa/docker/jupyter/start-container.sh
