k8/jupyter/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sa-jupyter-service
spec:
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
    name: http
  selector:
    app: sa-jupyter
