k8/jupyter/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-jupyter-ingress
  namespace: default
  annotations:
    nginx.org/websocket-services: "sa-jupyter-service"
spec:
  tls:
  - hosts:
    - sajupyter.example.com
    secretName: tls-jupyter
  rules:
  - host: sajupyter.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sa-jupyter-service
          servicePort: 8888
